# altsys-rust

./: .gitignore
sso/sso-application/: Cargo.toml
sso/sso-application/src/: lib.rs  openapi.rs
sso/sso-application/src/config/: AppConfig.rs  DatabaseConfig.rs  mod.rs
sso/sso-application/src/exception/: GlobalExceptionHandler.rs  mod.rs
sso/sso-application/src/middleware/: AuthMiddleware.rs  CasbinMiddleware.rs  mod.rs
sso/sso-application/src/rest/: mod.rs
sso/sso-application/src/rest/controller/: AuthController.rs  PermissionController.rs  RoleController.rs  TenantController.rs  UserController.rs  mod.rs
sso/sso-application/src/rest/payload/: AuthPayloads.rs  PermissionPayloads.rs  RolePayloads.rs  TenantPayloads.rs  UserPayloads.rs  mod.rs
sso/sso-application/src/rest/response/: ApiResponse.rs  mod.rs
sso/sso-application/src/rest/router/: ApiRouter.rs  mod.rs
sso/sso-application/src/state/: AppState.rs  mod.rs
sso/sso-container/: Cargo.toml
sso/sso-container/src/: main.rs
sso/sso-domain/: Cargo.toml
sso/sso-domain/src/: lib.rs
sso/sso-domain/src/dto/: Claims.rs  CreatePermissionCommand.rs  CreateRoleCommand.rs  CreateTenantCommand.rs  CreateUserCommand.rs  LoginCommand.rs  Permission.rs  PermissionResponse.rs  RefreshToken.rs  Role.rs  RolePermission.rs  RoleResponse.rs  Tenant.rs  TenantResponse.rs  TokenResponse.rs  UpdatePermissionCommand.rs  UpdateRoleCommand.rs  UpdateTenantCommand.rs  User.rs  UserResponse.rs  UserRole.rs  mod.rs
sso/sso-domain/src/enum/: DomainError.rs
sso/sso-domain/src/port/input/: AuthPort.rs  PermissionPort.rs  RolePort.rs  TenantPort.rs  UserPort.rs  mod.rs
sso/sso-domain/src/port/output/: PermissionRepositoryPort.rs  RefreshTokenRepositoryPort.rs  RoleRepositoryPort.rs  (+3 more)
sso/sso-domain/src/service/: AuthService.rs  PermissionService.rs  RoleService.rs  TenantService.rs  UserService.rs  mod.rs
(+59 files in other folders)
