[package]
name = "sso-application"
version = "0.1.0"
edition = "2021"

[dependencies]
sso-domain = { path = "../sso-domain" }
sso-dataaccess = { path = "../sso-dataaccess" }

serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
casbin = { workspace = true }
utoipa = { workspace = true }
