[package]
name = "sso-container"
version = "0.1.0"
edition = "2021"

[dependencies]
sso-application = { path = "../sso-application" }
sso-dataaccess = { path = "../sso-dataaccess" }
sso-domain = { path = "../sso-domain" }
migration = { path = "../migration" }

tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
casbin = { workspace = true }
dotenvy = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid.workspace = true
sea-orm-adapter = { version = "0.4.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
bcrypt.workspace = true
